// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select.Tags OptGroup renders correctly 1`] = `
<div>
  <div
    class="rc-select-pro rc-select-pro-multiple rc-select-pro-open rc-select-pro-show-search"
  >
    <div
      class="rc-select-pro-selector"
    >
      <div
        class="rc-select-pro-selection-overflow"
      >
        <div
          class="rc-select-pro-selection-overflow-item"
          style="opacity: 1;"
        >
          <span
            class="rc-select-pro-selection-item"
            title="Jack"
          >
            <span
              class="rc-select-pro-selection-item-content"
            >
              Jack
            </span>
            <span
              aria-hidden="true"
              class="rc-select-pro-selection-item-remove"
              style="user-select: none;"
              unselectable="on"
            >
              <span
                class="rc-select-pro-selection-item-remove-icon"
              >
                ×
              </span>
            </span>
          </span>
        </div>
        <div
          class="rc-select-pro-selection-overflow-item"
          style="opacity: 1;"
        >
          <span
            class="rc-select-pro-selection-item"
            title="foo"
          >
            <span
              class="rc-select-pro-selection-item-content"
            >
              foo
            </span>
            <span
              aria-hidden="true"
              class="rc-select-pro-selection-item-remove"
              style="user-select: none;"
              unselectable="on"
            >
              <span
                class="rc-select-pro-selection-item-remove-icon"
              >
                ×
              </span>
            </span>
          </span>
        </div>
        <div
          class="rc-select-pro-selection-overflow-item rc-select-pro-selection-overflow-item-suffix"
          style="opacity: 1;"
        >
          <div
            class="rc-select-pro-selection-search"
            style="width: 0px;"
          >
            <input
              aria-activedescendant="rc_select_TEST_OR_SSR_list_1"
              aria-autocomplete="list"
              aria-controls="rc_select_TEST_OR_SSR_list"
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-owns="rc_select_TEST_OR_SSR_list"
              autocomplete="off"
              class="rc-select-pro-selection-search-input"
              id="rc_select_TEST_OR_SSR"
              role="combobox"
              type="search"
              value=""
            />
            <span
              aria-hidden="true"
              class="rc-select-pro-selection-search-mirror"
            >
               
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rc-select-pro-dropdown rc-select-pro-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div>
        <div
          id="rc_select_TEST_OR_SSR_list"
          role="listbox"
          style="height: 0px; width: 0px; overflow: hidden;"
        >
          <div
            aria-selected="false"
            id="rc_select_TEST_OR_SSR_list_0"
            role="presentation"
          />
          <div
            aria-label="Jack"
            aria-selected="true"
            id="rc_select_TEST_OR_SSR_list_1"
            role="option"
          >
            jack
          </div>
          <div
            aria-selected="false"
            id="rc_select_TEST_OR_SSR_list_2"
            role="presentation"
          />
        </div>
        <div
          class="rc-virtual-list"
          style="position: relative;"
        >
          <div
            class="rc-virtual-list-holder"
            style="max-height: 200px; overflow-y: auto;"
          >
            <div>
              <div
                class="rc-virtual-list-holder-inner"
                style="display: flex; flex-direction: column;"
              >
                <div
                  class="rc-select-pro-item rc-select-pro-item-group"
                  title="Manager"
                >
                  Manager
                </div>
                <div
                  aria-selected="true"
                  class="rc-select-pro-item rc-select-pro-item-option rc-select-pro-item-option-grouped rc-select-pro-item-option-active rc-select-pro-item-option-selected"
                  title="Jack"
                >
                  <div
                    class="rc-select-pro-item-option-content"
                  >
                    Jack
                  </div>
                  <span
                    aria-hidden="true"
                    class="rc-select-pro-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      class="rc-select-pro-item-option-state-icon"
                    >
                      ✓
                    </span>
                  </span>
                </div>
                <div
                  class="rc-select-pro-item rc-select-pro-item-group"
                  title="Engineer"
                >
                  Engineer
                </div>
                <div
                  aria-selected="false"
                  class="rc-select-pro-item rc-select-pro-item-option rc-select-pro-item-option-grouped"
                  title="yiminghe"
                >
                  <div
                    class="rc-select-pro-item-option-content"
                  >
                    yiminghe
                  </div>
                  <span
                    aria-hidden="true"
                    class="rc-select-pro-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      class="rc-select-pro-item-option-state-icon"
                    />
                  </span>
                </div>
                <div
                  aria-selected="true"
                  class="rc-select-pro-item rc-select-pro-item-option rc-select-pro-item-option-selected"
                  title="foo"
                >
                  <div
                    class="rc-select-pro-item-option-content"
                  >
                    foo
                  </div>
                  <span
                    aria-hidden="true"
                    class="rc-select-pro-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      class="rc-select-pro-item-option-state-icon"
                    >
                      ✓
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select.Tags max tag render not display maxTagPlaceholder if maxTagCount not reach 1`] = `
<div
  class="rc-select-pro rc-select-pro-multiple rc-select-pro-show-search"
>
  <div
    class="rc-select-pro-selector"
  >
    <div
      class="rc-select-pro-selection-overflow"
    >
      <div
        class="rc-select-pro-selection-overflow-item rc-select-pro-selection-overflow-item-suffix"
        style="opacity: 1;"
      >
        <div
          class="rc-select-pro-selection-search"
          style="width: 0px;"
        >
          <input
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="rc-select-pro-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            role="combobox"
            type="search"
            value=""
          />
          <span
            aria-hidden="true"
            class="rc-select-pro-selection-search-mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
    <span
      class="rc-select-pro-selection-placeholder"
    />
  </div>
</div>
`;

exports[`Select.Tags max tag render truncates tags by maxTagCount and show maxTagPlaceholder 1`] = `
<div
  class="rc-select-pro rc-select-pro-multiple rc-select-pro-show-search"
>
  <div
    class="rc-select-pro-selector"
  >
    <div
      class="rc-select-pro-selection-overflow"
    >
      <div
        class="rc-select-pro-selection-overflow-item"
        style="opacity: 1;"
      >
        <span
          class="rc-select-pro-selection-item"
          title="One"
        >
          <span
            class="rc-select-pro-selection-item-content"
          >
            One
          </span>
          <span
            aria-hidden="true"
            class="rc-select-pro-selection-item-remove"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              class="rc-select-pro-selection-item-remove-icon"
            >
              ×
            </span>
          </span>
        </span>
      </div>
      <div
        class="rc-select-pro-selection-overflow-item"
        style="opacity: 1;"
      >
        <span
          class="rc-select-pro-selection-item"
          title="Two"
        >
          <span
            class="rc-select-pro-selection-item-content"
          >
            Two
          </span>
          <span
            aria-hidden="true"
            class="rc-select-pro-selection-item-remove"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              class="rc-select-pro-selection-item-remove-icon"
            >
              ×
            </span>
          </span>
        </span>
      </div>
      <div
        class="rc-select-pro-selection-overflow-item rc-select-pro-selection-overflow-item-rest"
        style="opacity: 1;"
      >
        <span
          class="rc-select-pro-selection-item"
        >
          <span
            class="rc-select-pro-selection-item-content"
          >
            <span>
              Omitted
            </span>
          </span>
        </span>
      </div>
      <div
        class="rc-select-pro-selection-overflow-item rc-select-pro-selection-overflow-item-suffix"
        style="opacity: 1;"
      >
        <div
          class="rc-select-pro-selection-search"
          style="width: 0px;"
        >
          <input
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="rc-select-pro-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            role="combobox"
            type="search"
            value=""
          />
          <span
            aria-hidden="true"
            class="rc-select-pro-selection-search-mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select.Tags max tag render truncates tags by maxTagCount and show maxTagPlaceholder function 1`] = `
<div
  class="rc-select-pro rc-select-pro-multiple rc-select-pro-show-search"
>
  <div
    class="rc-select-pro-selector"
  >
    <div
      class="rc-select-pro-selection-overflow"
    >
      <div
        class="rc-select-pro-selection-overflow-item"
        style="opacity: 1;"
      >
        <span
          class="rc-select-pro-selection-item"
          title="One"
        >
          <span
            class="rc-select-pro-selection-item-content"
          >
            One
          </span>
          <span
            aria-hidden="true"
            class="rc-select-pro-selection-item-remove"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              class="rc-select-pro-selection-item-remove-icon"
            >
              ×
            </span>
          </span>
        </span>
      </div>
      <div
        class="rc-select-pro-selection-overflow-item"
        style="opacity: 1;"
      >
        <span
          class="rc-select-pro-selection-item"
          title="Two"
        >
          <span
            class="rc-select-pro-selection-item-content"
          >
            Two
          </span>
          <span
            aria-hidden="true"
            class="rc-select-pro-selection-item-remove"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              class="rc-select-pro-selection-item-remove-icon"
            >
              ×
            </span>
          </span>
        </span>
      </div>
      <div
        class="rc-select-pro-selection-overflow-item rc-select-pro-selection-overflow-item-rest"
        style="opacity: 1;"
      >
        <span
          class="rc-select-pro-selection-item"
        >
          <span
            class="rc-select-pro-selection-item-content"
          >
            <span>
              1
               values omitted
            </span>
          </span>
        </span>
      </div>
      <div
        class="rc-select-pro-selection-overflow-item rc-select-pro-selection-overflow-item-suffix"
        style="opacity: 1;"
      >
        <div
          class="rc-select-pro-selection-search"
          style="width: 0px;"
        >
          <input
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="rc-select-pro-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            role="combobox"
            type="search"
            value=""
          />
          <span
            aria-hidden="true"
            class="rc-select-pro-selection-search-mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select.Tags max tag render truncates values by maxTagTextLength 1`] = `
<div
  class="rc-select-pro rc-select-pro-multiple rc-select-pro-show-search"
>
  <div
    class="rc-select-pro-selector"
  >
    <div
      class="rc-select-pro-selection-overflow"
    >
      <div
        class="rc-select-pro-selection-overflow-item"
        style="opacity: 1;"
      >
        <span
          class="rc-select-pro-selection-item"
          title="One"
        >
          <span
            class="rc-select-pro-selection-item-content"
          >
            On...
          </span>
          <span
            aria-hidden="true"
            class="rc-select-pro-selection-item-remove"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              class="rc-select-pro-selection-item-remove-icon"
            >
              ×
            </span>
          </span>
        </span>
      </div>
      <div
        class="rc-select-pro-selection-overflow-item"
        style="opacity: 1;"
      >
        <span
          class="rc-select-pro-selection-item"
          title="Two"
        >
          <span
            class="rc-select-pro-selection-item-content"
          >
            Tw...
          </span>
          <span
            aria-hidden="true"
            class="rc-select-pro-selection-item-remove"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              class="rc-select-pro-selection-item-remove-icon"
            >
              ×
            </span>
          </span>
        </span>
      </div>
      <div
        class="rc-select-pro-selection-overflow-item rc-select-pro-selection-overflow-item-suffix"
        style="opacity: 1;"
      >
        <div
          class="rc-select-pro-selection-search"
          style="width: 0px;"
        >
          <input
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="rc-select-pro-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            role="combobox"
            type="search"
            value=""
          />
          <span
            aria-hidden="true"
            class="rc-select-pro-selection-search-mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
